--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.liu.activity.MainActivity">
 
-
+    <Button
+        android:id="@+id/btn_1"
+        android:text="@string/app_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
